[package]
name = "wave_function_collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
itertools = "0.10.5"
macroquad = "0.3.25"
on_your_marks = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.26"
