[package]
name = "wave_function_collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
macroquad = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0.96"
